# rust_file_encryption

./: Cargo.toml  README.md  read.txt
files/: read.txt.enc
src/: main.rs
